[gd_scene load_steps=13 format=2]

[ext_resource path="res://Objects/Misc/TeamSelect.gd" type="Script" id=1]
[ext_resource path="res://hg.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/misc/eye_PNG35674.png" type="Texture" id=6]
[ext_resource path="res://Sprites/misc/exit_PNG35.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.666667 )
shadow_size = 6

[sub_resource type="StyleBoxFlat" id=2]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 6

[sub_resource type="DynamicFont" id=3]
size = 28
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.196078, 0.196078, 0.196078, 0.666667 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
shadow_size = 6

[sub_resource type="StyleBoxFlat" id=5]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=6]
size = 18
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.694118, 0.72549, 0.145098, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 6

[sub_resource type="DynamicFont" id=8]
size = 24
use_filter = true
font_data = ExtResource( 5 )

[node name="TeamSelect" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TeamSelect" type="Panel" parent="."]
margin_left = 116.0
margin_top = 199.0
margin_right = 559.0
margin_bottom = 631.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="VBoxContainer" parent="TeamSelect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -195.0
margin_right = 150.0
margin_bottom = 195.0
custom_constants/separation = 50
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="T" type="Button" parent="TeamSelect/container"]
margin_right = 300.0
margin_bottom = 60.0
rect_min_size = Vector2( 300, 60 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Terrorist"

[node name="CT" type="Button" parent="TeamSelect/container"]
margin_top = 110.0
margin_right = 300.0
margin_bottom = 170.0
rect_min_size = Vector2( 300, 60 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Counter Terrorist"

[node name="spec" type="Button" parent="TeamSelect/container"]
margin_top = 220.0
margin_right = 300.0
margin_bottom = 280.0
rect_min_size = Vector2( 300, 60 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Spectate"

[node name="quit" type="Button" parent="TeamSelect/container"]
margin_top = 330.0
margin_right = 300.0
margin_bottom = 390.0
rect_min_size = Vector2( 300, 60 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Exit Server"

[node name="panel_pos" type="Node2D" parent="TeamSelect"]
position = Vector2( 508.473, 9.47215 )

[node name="spec_panel" type="Panel" parent="TeamSelect"]
margin_left = 1107.79
margin_top = 585.051
margin_right = 1614.79
margin_bottom = 924.051
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TeamSelect/spec_panel"]
margin_left = 159.756
margin_top = 30.659
margin_right = 309.756
margin_bottom = 160.659
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TeamSelect/spec_panel/Panel"]
margin_right = 150.0
margin_bottom = 130.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TeamSelect/spec_panel"]
margin_left = 48.0
margin_top = 183.0
margin_right = 449.0
margin_bottom = 273.0
custom_fonts/font = SubResource( 6 )
text = "Watch the action. watch other players playing."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spec_Button" type="Button" parent="TeamSelect/spec_panel"]
margin_left = 348.0
margin_top = 287.0
margin_right = 455.0
margin_bottom = 325.0
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit_panel" type="Panel" parent="TeamSelect"]
margin_left = 426.421
margin_top = 768.134
margin_right = 933.421
margin_bottom = 1107.13
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TeamSelect/exit_panel"]
margin_left = 159.756
margin_top = 30.659
margin_right = 309.756
margin_bottom = 160.659
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TeamSelect/exit_panel/Panel"]
margin_right = 150.0
margin_bottom = 130.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TeamSelect/exit_panel"]
margin_left = 48.0
margin_top = 183.0
margin_right = 449.0
margin_bottom = 273.0
custom_fonts/font = SubResource( 6 )
text = "Quit this boring server"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="TeamSelect/exit_panel"]
margin_left = 348.0
margin_top = 287.0
margin_right = 455.0
margin_bottom = 325.0
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="TeamSelect"]
[connection signal="pressed" from="TeamSelect/container/spec" to="." method="_on_spec_pressed"]
[connection signal="pressed" from="TeamSelect/container/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="TeamSelect/spec_panel/spec_Button" to="TeamSelect" method="_on_spec_Button_pressed"]
[connection signal="pressed" from="TeamSelect/exit_panel/Button" to="TeamSelect" method="_on_Button_pressed"]
